--- a/основы_python.ipynb
+++ b/основы_python.ipynb
@@ -139,13 +139,27 @@
       "metadata": {
         "id": "8iphx4LM6xbx"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1.0\n",
+            "1.0\n",
+            "9.0\n"
+          ]
+        }
+      ],
       "source": [
         "def task5(a, b):\n",
         "    s = 0\n",
         "    for i in range(len(a)):\n",
         "        s += (a[i]-b[i]) ** 2\n",
-        "    return 1 / len(a) * s"
+        "    return 1 / len(a) * s\n",
+        "\n",
+        "assert task5([1,2],[2,1]) == 1.0\n",
+        "assert task5([3,4],[4,3]) == 1.0\n",
+        "assert task5([-1,-2],[2,1]) == 9.0"
       ]
     },
     {
