--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -48,7 +48,6 @@
       ],
       "source": [
         "import numpy as np\n",
-        "# TODO\n",
         "def sum_prod(X, V):\n",
         "    n = X[0].shape[0]\n",
         "    result = np.zeros((n, 1))\n",
@@ -66,7 +65,8 @@
         "            np.array([[0], [1]]),\n",
         "            np.array([[1], [1]])\n",
         "        ]\n",
-        "print(sum_prod(matrices, vectors))"
+        "\n",
+        "np.testing.assert_array_equal(sum_prod(matrices, vectors), [[4.],[5.]])"
       ]
     },
     {
